--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,44 @@
-/* You can add global styles to this file, and also import other style files */
+
+body{
+  background-color: #0A0E21;
+}
+.titulo{
+  font-family: 'Raleway',sans-serif;
+  color: #fff;
+  text-align: center;
+  margin-top: 25px;
+  font-weight: bold;
+}
+
+.row{
+  margin-top: 20px;
+}
+
+.btn-color{
+  background-color: #fff;
+  border:1px solid #ff3366;
+  border-radius: 15px;
+  width:100%;
+  color:#ff3366;
+}
+
+.btn-color:hover{
+  background-color: aliceblue;
+  color:#ff3366;
+  border:1px solid #ff3366;
+
+}
+.btn-color:active{
+  background-color:#ff3366 !important;
+  color:aliceblue !important;
+  border:1px solid #ff3366 !important;
+
+}
+
+.contenedor{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100%;
+}
